Add handler to update board
